package org.example.db.mysql;

import org.example.db.DBConnection;
import java.util.List;
import java.util.Map;

/**
 * Conexión simulada para el proveedor MySQL.
 *
 * Esta clase implementa la interfaz {@link org.example.db.DBConnection} y actúa como
 * una representación simulada de una conexión a una base de datos MySQL. No usa
 * JDBC ni librerías externas; está pensada para imitar el comportamiento de una
 * conexión real a nivel de API (abrir/cerrar/comprobar estado/ejecutar SQL) sin
 * realizar operaciones de red.
 *
 * El diseño permite que las llamadas a ejecución deleguen internamente a la lógica
 * simulada (actualmente marcadas como TODO). Los métodos lanzan
 * UnsupportedOperationException hasta que se implemente la simulación.
 */
public class MySQLConnection implements DBConnection {
    /** Identificador lógico de la conexión; se prefiere el prefijo "mysql:". */
    private final String name;

    /**
     * Constructor.
     *
     * Construye una nueva conexión simulada con un nombre lógico. Se añade el
     * prefijo "mysql:" para distinguirla de otros proveedores.
     *
     * @param name Nombre lógico de la conexión (no nulo, recomendado corto y único)
     */
    public MySQLConnection(String name) {
        this.name = "mysql:" + name;
    }

    /**
     * Obtiene el nombre (identificador) de la conexión.
     *
     * Devuelve el identificador con prefijo "mysql:" que se asignó en el constructor.
     *
     * @return Cadena no nula con el nombre de la conexión.
     */
    @Override
    public String getName() {
        return name;
    }

    /**
     * Abre/establece la conexión.
     *
     * Este método debe cambiar el estado interno para reflejar que la conexión
     * está activa. En la versión actual está marcado como pendiente de implementar
     * y lanza UnsupportedOperationException.
     *
     * @throws UnsupportedOperationException si la implementación está incompleta
     */
    @Override
    public void connect() {
        // TODO: implementar conexión simulada
        throw new UnsupportedOperationException("Not implemented");
    }

    /**
     * Cierra la conexión.
     *
     * Debe liberar recursos simulados y actualizar el estado interno.
     * Actualmente no está implementado.
     *
     * @throws UnsupportedOperationException si la implementación está incompleta
     */
    @Override
    public void disconnect() {
        // TODO: implementar desconexión simulada
        throw new UnsupportedOperationException("Not implemented");
    }

    /**
     * Indica si la conexión está establecida (simulada).
     *
     * @return true si la conexión se considera activa; false en caso contrario.
     * @throws UnsupportedOperationException si la implementación está incompleta
     */
    @Override
    public boolean isConnected() {
        // TODO: implementar estado de la conexión
        throw new UnsupportedOperationException("Not implemented");
    }

    /**
     * Ejecuta una sentencia SQL de forma simulada.
     *
     * La implementación deberá parsear/interpretar la cadena SQL de forma
     * simplificada y devolver una lista de filas representadas como mapas
     * columna->valor. Por ahora lanza UnsupportedOperationException.
     *
     * @param sql Sentencia SQL a ejecutar (texto plano)
     * @return Lista de filas (cada fila: Map nombreColumna->valor)
     * @throws UnsupportedOperationException si la implementación está incompleta
     */
    @Override
    public List<Map<String, Object>> execute(String sql) {
        // TODO: implementar ejecución de SQL simulada
        throw new UnsupportedOperationException("Not implemented");
    }
}
